@@ -1,6 +1,5 @@
-%Error-UNSUPPORTED: t/t_event_control_star.v:19:14: Unsupported: no sense equation (@*)
+%Error-UNSUPPORTED: t/t_event_control_star.v:19:6: Unsupported: no sense equation (@*)
    19 |      @* a = c;   
-      |              ^
+      |      ^
                     ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
-%Error: Verilator internal fault, sorry. Suggest trying --debug --gdbbt
-%Error: Command Failed
+%Error: Exiting due to
